Overflow issue fix attempt #1

--- a/slides.css
+++ b/slides.css
@@ -3,6 +3,7 @@
     left: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 .slideshow .slide{
