--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     padding: 0;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 .nav-bar{
